# dynamodb-tutorial-python

./: .gitignore  README.rst  pyproject.toml
dynamodb_tutorial_python/: __init__.py
tests/: test_dynamodb_tutorial_python.py
