[tool.poetry]
name = "dynamodb-tutorial-python"
version = "0.1.0"
description = ""
authors = ["Cristian Romo <cristian.g.romo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
main = "dynamodb_tutorial_python:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
